--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "nyc mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
     "mongoose": "^5.9.22",
+    "nyc": "^15.1.0",
     "q": "^1.5.1",
     "xml2js": "^0.4.23"
   },
